[package]
name = "trivia_project"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "954022c79945d9258fe3f2dcd26cfabfe23f67b7"}
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
html-escape = "0.2"
rand = "0.8"

