[package]
name = "trivia_project"
version = "0.1.0"
authors = ["Willy Woosley"]
edition = "2021"
repository = "https://github.com/WillyWoosley/PrettySure"
license = "GPL-3.0-or-later"

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "954022c79945d9258fe3f2dcd26cfabfe23f67b7"}
bevy = "0.7"
reqwest = { version = "0.11", features = ["json"] }
async-compat = "0.2.1"
futures-lite = "1.12"
serde = { version = "1.0", features = ["derive"] }
html-escape = "0.2"
rand = "0.8"

